infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-data-service
spec:
  selector:
    app: mongo-data-service
  ports:
    - port: 80
      targetPort: 8000
